--- a/views/contact.html
+++ b/views/contact.html
@@ -39,7 +39,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div data-component="validation" data-component-path="form">
-						<button class="button" disabled="disabled" data-component="click" data-component-path="#submit">@(SUBMIT FORM)</button>
+						<button class="button" disabled="disabled" data-component="click" data-component-path="#submit">SUBMIT FORM</button>
 					</div>
 				</div>
 			</div>
