--- a/views/index.html
+++ b/views/index.html
@@ -15,10 +15,8 @@
 <br />
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-		<div class="newsletter" data-component="newsletter" data-success="Thanks, you have been added." data-widget="true">
-			<div class="newsletter-button"><button><span class="fa fa-envelope"></span>SUBMIT</button></div>
-			<div class="newsletter-input"><input type="text" placeholder="Join to our mailing list"></div>
-		</div>
+		<!-- NEWSLETTER COMPONENT -->
+		<div data-jc-url="/components/newsletter.html"></div>
 	</div>
 </div>
 <br />
