--- a/views/layout.html
+++ b/views/layout.html
@@ -11,8 +11,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	@{import('meta', 'head', 'default.css', 'default.js', 'favicon.ico')}
 </head>
-<body>
-	<div data-component="cookie" class="hidden">This site uses cookies for visitor statistics. By continuing to browse the site you are agreeing to our use of cookies.</div>
+<body data-jc="exec">
+	<div data-jc="cookie" class="hidden">This site uses cookies for visitor statistics. By continuing to browse the site you are agreeing to our use of cookies.</div>
 	<header>
 		<div class="container">
 			<a href="javascript:void(0)" class="mainmenu-button"><i class="fa fa-navicon"></i></a>
@@ -29,8 +29,8 @@
 		@{body}
 	</div>
 	<footer>
-		<div>&copy; 2015-2016 All rights reserved.</div>
-		<div><a href="http://www.totaljs.com">Powered by Total.js - web framework</a></div>
+		<div>&copy; 2015-2017 All rights reserved.</div>
+		<div><a href="http://www.totaljs.com">Powered by Total.js - framework for Node.js</a></div>
 	</footer>
 
 </body>
