--- a/views/references.html
+++ b/views/references.html
@@ -3,39 +3,39 @@
 <h1>References</h1>
 <div class="row">
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="CMS_edit img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 </div>
