--- a/views/contact.html
+++ b/views/contact.html
@@ -6,5 +6,7 @@
 		<h1>@{title}</h1>
 		<!-- CONTACTFORM COMPONENT -->
 		<div data-jc-url="/components/contactform.html"></div>
+		<div data-jc-url="/components/contactform.html"></div>
+		<div data-jc-url="/components/contactform.html"></div>
 	</div>
 </div>
