--- a/public/css/default.css
+++ b/public/css/default.css
@@ -4,7 +4,7 @@ $font    : 'Source Sans Pro';
 .container { padding-left: 25px; padding-right: 25px; }
 
 html,body { height: 100%; }
-body { background-color: white; padding: 0; color: #AAB2BD; font-smoothing: antialiased; }
+body { background-color: white; padding: 0; color: gray; font-smoothing: antialiased; }
 form { padding: 0; margin: 0; }
 
 header { border-bottom: 1px solid #F0F0F0; padding: 15px 0; margin-bottom: 30px; }
@@ -50,7 +50,14 @@ h3.large { font-size: 30px; margin-bottom: 15px; font-weight: 200; }
 .reference b { display: block; font-size: 14px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
 .reference { margin-bottom: 30px; }
 
-.message-success { background-color: #8CC152; color: white; padding: 18px 20px; text-align: center; font-size: 16px; }
+.message-success { background-color: #8CC152; color: white; padding: 18px 20px; text-align: center; font-size: 16px; border-radius: 3px; }
+.message-success .fa { margin-right: 5px; }
+
+.button { position: relative; display: inline-block; margin: 0; padding: 0; border: 2px solid #D0D0D0; border-radius: 4px; background-color: white; background: linear-gradient(white,#F0F0F0); padding: 20px 0; font: normal normal 14px Arial; vertical-align: middle; color: gray; width: 100%; }
+.button:hover { border-color: silver; }
+.button:active { background: white; color: #A4A4A4; }
+.button:disabled { color: silver; border-color: #E0E0E0; cursor: not-allowed; background: white; }
+.button-small { padding: 13px 0; }
 
 @media (max-width: 767px) {
 	.mainmenu-button { display: block; }
