--- a/views/layout.html
+++ b/views/layout.html
@@ -6,9 +6,9 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="robots" content="all,follow" />
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700&subset=latin,latin-ext" />
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" />
+	<script src="//cdn.componentator.com/spa.min.js"></script>
 	@{import('meta', 'head', 'default.css', 'default.js', 'favicon.ico')}
 </head>
 <body data-jc="exec">
@@ -30,7 +30,7 @@
 	</div>
 	<footer>
 		<div>&copy; 2015-2017 All rights reserved.</div>
-		<div><a href="http://www.totaljs.com">Powered by Total.js - framework for Node.js</a></div>
+		<div><a href="http://www.totaljs.com">Powered by Total.js</a></div>
 	</footer>
 
 </body>
