--- a/public/components/newsletter.html
+++ b/public/components/newsletter.html
@@ -1,4 +1,4 @@
-<div class="newsletter" data-jc="newsletter" data-success="Thanks, you have been added." data-widget="true">
+<div class="newsletter" data-jc="newsletter" data-success="Thanks, you have been added.">
 	<div class="newsletter-button"><button><span class="fa fa-envelope"></span>SUBMIT</button></div>
 	<div class="newsletter-input"><input type="text" placeholder="Join to our mailing list"></div>
 </div>
