--- a/views/layout.html
+++ b/views/layout.html
@@ -7,18 +7,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="robots" content="all,follow" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700&subset=latin,latin-ext" />
-	<link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" />
-	<script src="//cdn.componentator.com/spa.min.js"></script>
+	<!--- <link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" /> --->
+	<!--- <script src="//cdn.componentator.com/spa.min.js"></script>--->
+
+	<link href="//cdn.componentator.com/spa.min@19pro.css" rel="stylesheet" />
+	<script src="//cdn.componentator.com/spa.min@19.js"></script>
 	@{import('meta', 'head', 'default.css', 'default.js', 'favicon.ico')}
 </head>
-<body data-jc="exec">
-	<div data-jc="cookie" class="hidden">This site uses cookies for visitor statistics. By continuing to browse the site you are agreeing to our use of cookies.</div>
+<body>
+	<ui-component name="exec"></ui-component>
+	<ui-component name="icons"></ui-component>
+	<ui-component name="cookie" class="hidden">This site uses cookies for visitor statistics. By continuing to browse the site you are agreeing to our use of cookies.</ui-component>
 	<header>
 		<div class="container">
-			<a href="javascript:void(0)" class="mainmenu-button"><i class="fa fa-navicon"></i></a>
+			<a href="javascript:void(0)" class="mainmenu-button"><i class="ti ti-navicon"></i></a>
 			<a href="/"><img src="/img/logo.png" alt="@{config.name}" border="0" height="30" /></a>
 			<nav>
-				<a href="/"><i class="fa fa-home"></i>Home</a>
+				<a href="/"><i class="ti ti-home"></i>Home</a>
 				<a href="/services/">Services</a>
 				<a href="/references/">References</a>
 				<a href="/contact/">Contact</a>
