--- a/public/components/contactform.html
+++ b/public/components/contactform.html
@@ -1,48 +1,48 @@
-<div data-jc-scope="?" class="hidden" data-jc-class="hidden">
+<ui-plugin path="?" class="hidden" data-jc-class="hidden">
 
-	<div data-jc="visible" data-jc-path="response" data-jc-config="if:value && value.success === true" class="hidden">
-		<div class="message-success"><span class="fa fa-check-circle"></span>Thanks, the contact form has been sent successfully.</div>
+	<ui-component name="visible" path="response" config="if:value && value.success === true" class="hidden">
+		<div class="message-success"><span class="ti ti-check-circle"></span>Thanks, the contact form has been sent successfully.</div>
 		<br />
-	</div>
+	</ui-component>
 
-	<div data-jc="visible" data-jc-path="response" data-jc-config="if:!value || !value.success">
+	<ui-component name="visible" path="response" config="if:!value || !value.success">
 		<div class="row">
 			<div class="col-md-6 m">
-				<div data-jc="textbox" data-jc-path="firstname" data-jc-value="''" data-jc-config="required:true">First name</div>
+				<ui-component name="textbox" path="firstname" default="''" config="required:true">First name</ui-component>
 			</div>
 			<div class="col-md-6 m">
-				<div data-jc="textbox" data-jc-path="lastname" data-jc-value="''" data-jc-config="required:true">Last name</div>
+				<ui-component name="textbox" path="lastname" default="''" config="required:true">Last name</ui-component>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6 m">
-				<div data-jc="textbox" data-jc-path="email" data-jc-value="'@'" data-jc-config="required:true;type:email">Email address</div>
+				<ui-component name="textbox" path="email" default="'@'" config="required:true;type:email">Email address</ui-component>
 			</div>
 			<div class="col-md-6 m">
-				<div data-jc="textbox" data-jc-path="phone" data-jc-value="''">Phone number</div>
+				<ui-component name="textbox" path="phone" default="''">Phone number</ui-component>
 			</div>
 		</div>
 		<br />
 		<div class="row">
 			<div class="col-md-12 m">
-				<div data-jc="textarea" data-jc-path="message" data-jc-value="''" data-jc-config="height:100;required:true">Message</div>
+				<ui-component name="textarea" path="message" default="''" config="height:100;required:true">Message</ui-component>
 			</div>
 		</div>
-		<div data-jc="error" data-jc-path="response"></div>
+		<ui-component name="error" path="response"></ui-component>
 		<br />
 		<div class="row">
 			<div class="col-md-6">
-				<div data-jc="validation" data-jc-path="?">
+				<ui-component name="validation" path="?">
 					<button class="button exec" name="submit" disabled="disabled" data-exec="contactformsubmit">SUBMIT FORM</button>
-				</div>
+				</ui-component>
 			</div>
 		</div>
-	</div>
-</div>
+	</ui-component>
+</ui-plugin>
 
 <script>
 	!window.contactformsubmit && (window.contactformsubmit = function(el) {
-		var component = el.closest('[data-jc-path]').component();
+		var component = el.closest('[path]').component();
 		var scope = component.pathscope;
 		if (CAN(scope + '.*')) {
 			RESET(scope + '.*');
