--- a/public/components/newsletter.html
+++ b/public/components/newsletter.html
@@ -1,7 +1,7 @@
-<div class="newsletter" data-jc="newsletter" data-success="Thanks, you have been added.">
-	<div class="newsletter-button"><button><span class="fa fa-envelope"></span>SUBMIT</button></div>
+<ui-component name="newsletter" success="Thanks, you have been added.">
+	<div class="newsletter-button"><button><span class="ti ti-envelope"></span>SUBMIT</button></div>
 	<div class="newsletter-input"><input type="text" placeholder="Join to our mailing list"></div>
-</div>
+</ui-component>
 
 <script>
 	COMPONENT('newsletter', function() {
@@ -28,7 +28,7 @@
 				AJAX('POST /api/newsletter/', { email: input.val() }, function(response) {
 
 					input.addClass('newsletter-success');
-					input.val(self.attr('data-success'));
+					input.val(self.attr('success'));
 
 					setTimeout(function() {
 						input.val('');
