--- a/views/references.html
+++ b/views/references.html
@@ -1,41 +1,51 @@
-@{title('References')}
+<style>
+	.reference * { transition: all 0.5s; }
+	.reference a { position: relative; display: block; color: gray; }
+	.reference a:hover { text-decoration: none !important; }
+	.reference a:hover * { text-decoration: none; }
+	.reference a:hover span { background-color: #F0F0F0; color: black; }
+	.reference-title { display: block; padding: 10px 0; background-color: #F8F8F8; text-align: center; font-size: 12px; }
+	.reference b { display: block; font-size: 14px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
+	.reference { margin-bottom: 30px; }
+</style>
+
 
 <h1>References</h1>
 <div class="row">
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 	<div class="col-md-3 col-sm-6 col-xs-6 reference">
-		<a href="#"><img src="/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+		<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 	</div>
 </div>
