--- a/views/services.html
+++ b/views/services.html
@@ -13,7 +13,7 @@
 	</div>
 </div>
 <br />
-<div><img src="/img/image.jpg" alt="Our work" border="0" class="img-responsive img-rounded" /></div>
+<div><img src="/public/img/image.jpg" alt="Our work" border="0" class="img-responsive img-rounded" /></div>
 <br />
 <br />
 <div class="row">
