--- a/public/css/default.css
+++ b/public/css/default.css
@@ -43,6 +43,7 @@ h3.large { font-size: 30px; margin-bottom: 15px; font-weight: 200; }
 .linkbutton:focus { color: #69AF44; text-decoration: none; background-color: white; }
 .linkbutton:active { box-shadow: inset 0 2px 5px rgba(0,0,0,0.1); color: white; background-color: #69AF44; }
 
+/*
 .reference * { transition: all 0.5s; }
 .reference a { position: relative; display: block; color: gray; }
 .reference a:hover { text-decoration: none !important; }
@@ -51,6 +52,7 @@ h3.large { font-size: 30px; margin-bottom: 15px; font-weight: 200; }
 .reference-title { display: block; padding: 10px 0; background-color: #F8F8F8; text-align: center; font-size: 12px; }
 .reference b { display: block; font-size: 14px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
 .reference { margin-bottom: 30px; }
+*/
 
 .message-success { background-color: #8CC152; color: white; padding: 18px 20px; text-align: center; font-size: 16px; border-radius: 3px; }
 .message-success .ti { margin-right: 5px; }
