--- a/views/contact.html
+++ b/views/contact.html
@@ -1,10 +1,11 @@
-@{title('Contact')}
 
-<div class="row">
-	<div class="col-md-2"></div>
-	<div class="col-md-8 m">
-		<h1>@{title}</h1>
-		<!-- CONTACTFORM COMPONENT -->
-		<div data-jc-url="/components/contactform.html"></div>
+<ui-plugin path="~PATH~">
+	<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-8 m">
+			<h1>@{title}</h1>
+			<!-- CONTACTFORM COMPONENT -->
+			<ui-import path="/public/components/contactform.html"></ui-import>
+		</div>
 	</div>
-</div>
+</ui-plugin>
