--- a/views/layout.html
+++ b/views/layout.html
@@ -8,6 +8,7 @@
 	<meta name="robots" content="all,follow" />
 	<link rel="stylesheet" href="/public/css/default.css">
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700&subset=latin,latin-ext" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<!--- <link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" /> --->
 	<!--- <script src="//cdn.componentator.com/spa.min.js"></script>--->
 
