--- a/public/components/contactform.html
+++ b/public/components/contactform.html
@@ -1,4 +1,4 @@
-<ui-plugin path="?" class="hidden" data-jc-class="hidden">
+<ui-plugin path="?" class="hidden">
 
 	<ui-component name="visible" path="response" config="if:value && value.success === true" class="hidden">
 		<div class="message-success"><span class="ti ti-check-circle"></span>Thanks, the contact form has been sent successfully.</div>
@@ -41,12 +41,23 @@
 </ui-plugin>
 
 <script>
-	!window.contactformsubmit && (window.contactformsubmit = function(el) {
-		var component = el.closest('[path]').component();
-		var scope = component.pathscope;
-		if (CAN(scope + '.*')) {
-			RESET(scope + '.*');
-			AJAX('POST /api/contact/', GET(scope), scope + '.response');
-		}
+	PLUGIN(function(exports) {
+		/* !window.contactformsubmit && (window.contactformsubmit = function(el) {
+			var component = el.closest('[path]').component();
+			var scope = component.pathscope;
+			if (CAN(scope + '.*')) {
+				RESET(scope + '.*');
+				AJAX('POST /api/contact/', GET(scope), scope + '.response');
+			}
+		}); */
+
+		exports.contactformsubmit = function(el) {
+			var component = el.closest('[path]').component();
+			var scope = component.pathscope;
+			if (CAN(scope + '.*')) {
+				RESET(scope + '.*');
+				AJAX('POST /api/contact/', GET(scope), scope + '.response');
+			}
+		};
 	});
 </script>
