--- a/views/layout.html
+++ b/views/layout.html
@@ -26,9 +26,9 @@
 			<a href="/"><img src="/public/img/logo.png" alt="@{config.name}" border="0" height="30" /></a>
 			<nav>
 				<a href="/"><i class="ti ti-home"></i>Home</a>
-				<a href="/services/">Services</a>
-				<a href="/references/">References</a>
-				<a href="/contact/">Contact</a>
+				<a href="services.html">Services</a>
+				<a href="references.html">References</a>
+				<a href="contact.html">Contact</a>
 			</nav>
 		</div>
 	</header>
