--- a/views/contact.html
+++ b/views/contact.html
@@ -5,7 +5,63 @@
 		<div class="col-md-8 m">
 			<h1>@{title}</h1>
 			<!-- CONTACTFORM COMPONENT -->
-			<ui-import path="/public/components/contactform.html"></ui-import>
+			<!--- <ui-import path="/public/components/contactform.html"></ui-import> --->
+			<ui-component name="visible" path="response" config="if:!value || !value.success">
+				<div class="row">
+					<div class="col-md-6 m">
+						<ui-component name="textbox" path="firstname" default="''" config="required:true">First name</ui-component>
+					</div>
+					<div class="col-md-6 m">
+						<ui-component name="textbox" path="lastname" default="''" config="required:true">Last name</ui-component>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 m">
+						<ui-component name="textbox" path="email" default="'@'" config="required:true;type:email">Email address</ui-component>
+					</div>
+					<div class="col-md-6 m">
+						<ui-component name="textbox" path="phone" default="''">Phone number</ui-component>
+					</div>
+				</div>
+				<br />
+				<div class="row">
+					<div class="col-md-12 m">
+						<ui-component name="textarea" path="message" default="''" config="height:100;required:true">Message</ui-component>
+					</div>
+				</div>
+				<ui-component name="error" path="response"></ui-component>
+				<br />
+				<div class="row">
+					<div class="col-md-6">
+						<ui-component name="validation" path="?">
+							<button class="button exec" name="submit" disabled="disabled" data-exec="contactformsubmit">SUBMIT FORM</button>
+						</ui-component>
+					</div>
+				</div>
+			</ui-component>
 		</div>
 	</div>
 </ui-plugin>
+
+<script>
+	PLUGIN(function(exports) {
+		/* !window.contactformsubmit && (window.contactformsubmit = function(el) {
+			var component = el.closest('[path]').component();
+			var scope = component.pathscope;
+			if (CAN(scope + '.*')) {
+				RESET(scope + '.*');
+				AJAX('POST /api/contact/', GET(scope), scope + '.response');
+			}
+		}); */
+
+		exports.contactformsubmit = function(el) {
+			var component = el.closest('[path]').component();
+			var scope = component.pathscope;
+			console.log('Scope: ', scope);
+			if (CAN(scope + '.*')) {
+				RESET(scope + '.*');
+				AJAX('POST /api/contact/', GET(scope), scope + '.nothinghappened');
+			}
+		};
+	});
+</script>
