--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,3 @@
-@{title('Full website example')}
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -62,7 +60,7 @@
 	<br />
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 m">
-			<a href="/contact/" class="linkbutton">CONTACT US</a>
+			<a href="contact.html" class="linkbutton">CONTACT US</a>
 		</div>
 	</div>
 
