--- a/public/components/contactform.html
+++ b/public/components/contactform.html
@@ -1,4 +1,4 @@
-<ui-plugin path="?" class="hidden">
+<ui-plugin path="~PATH~" class="hidden">
 
 	<ui-component name="visible" path="response" config="if:value && value.success === true" class="hidden">
 		<div class="message-success"><span class="ti ti-check-circle"></span>Thanks, the contact form has been sent successfully.</div>
