--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,4 @@
+<!--- 
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,9 +10,8 @@
 	<link rel="stylesheet" href="/public/css/default.css">
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700&subset=latin,latin-ext" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<!--- <link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" /> --->
-	<!--- <script src="//cdn.componentator.com/spa.min.js"></script>--->
-
+	<link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" />
+	<script src="//cdn.componentator.com/spa.min.js"></script> 
 	<link href="//cdn.componentator.com/spa.min@19pro.css" rel="stylesheet" />
 	<script src="//cdn.componentator.com/spa.min@19.js"></script>
 </head>
@@ -19,19 +19,18 @@
 	<h1>Total.js Example</h1>
 	<div class="row">
 		<div class="col-md-4 col-sm-4 m">
-			<a href="/services/"><img src="/public/img/001.jpg" border="0" alt="Eshop" class="img-responsive img-rounded" /></a>
+			<a href="/services/"><img src="/public/img/001.jpg" alt="Eshop" class="img-responsive img-rounded" /></a>
 		</div>
 		<div class="col-md-4 col-sm-4 m">
-			<a href="/services/"><img src="/public/img/002.jpg" border="0" alt="Easy modifications" class="img-responsive img-rounded" /></a>
+			<a href="/services/"><img src="/public/img/002.jpg" alt="Easy modifications" class="img-responsive img-rounded" /></a>
 		</div>
 		<div class="col-md-4 col-sm-4 m">
-			<a href="/services/"><img src="/public/img/003.jpg" border="0" alt="Redesign it" class="img-responsive img-rounded" /></a>
+			<a href="/services/"><img src="/public/img/003.jpg" alt="Redesign it" class="img-responsive img-rounded" /></a>
 		</div>
 	</div>
 	<br />
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
-			<!-- NEWSLETTER COMPONENT -->
 			<ui-import path="/public/components/newsletter.html"></ui-import>
 		</div>
 	</div>
@@ -87,3 +86,5 @@
 	</script>
 </body>
 </html>
+
+--->
