--- a/views/references.html
+++ b/views/references.html
@@ -14,40 +14,40 @@
 	<h1>References</h1>
 	<div class="row">
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" border="0" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
 		</div>
 	</div>
 </ui-plugin>
