--- a/views/services.html
+++ b/views/services.html
@@ -1,5 +1,3 @@
-@{title('Services')}
-
 <ui-plugin path="~PATH~">
 	<h1>Our work <b>is our hobby</b></h1>
 	<br />
@@ -14,7 +12,7 @@
 		</div>
 	</div>
 	<br />
-	<div><img src="/public/img/image.jpg" alt="Our work" border="0" class="img-responsive img-rounded" /></div>
+	<div><img src="/public/img/image.jpg" alt="Our work" class="img-responsive img-rounded" /></div>
 	<br />
 	<br />
 	<div class="row">
