--- a/public/components/newsletter.html
+++ b/public/components/newsletter.html
@@ -1,3 +1,14 @@
+<style>
+	.newsletter { background-color: #F0F0F0; margin: 20px 0; }
+	.newsletter-input { margin-right: 150px; padding: 0 20px; background-color: #F0F0F0; }
+	.newsletter-input input { width: 100%; background-color: transparent; border: 0; font-size: 16px; height: 40px; outline: 0; color: black; }
+	.newsletter-button { width: 150px; float: right; margin: 0; padding: 0; }
+	.newsletter-button button { width: 100%; background-color: #D0D0D0; border: 0; height: 40px; color: gray; }
+	.newsletter-button button:hover { background-color: black; color: white; }
+	.newsletter-button .ti { margin-right: 8px; font-size: 16px; }
+	.newsletter-success { color: #7B9B46 !important; }
+</style>
+
 <ui-component name="newsletter" success="Thanks, you have been added.">
 	<div class="newsletter-button"><button><span class="ti ti-envelope"></span>SUBMIT</button></div>
 	<div class="newsletter-input"><input type="text" placeholder="Join to our mailing list"></div>
