--- a/views/contact.html
+++ b/views/contact.html
@@ -8,7 +8,7 @@
 			<ui-component name="visible" path="response" config="if:!value || !value.success">
 				<div class="row">
 					<div class="col-md-6 m">
-						<ui-component name="textbox" path="firstname" default="''" config="required:true">First name</ui-component>
+						<ui-component name="textbox" path="firstname" default="''" config="required:true">First name here</ui-component>
 					</div>
 					<div class="col-md-6 m">
 						<ui-component name="textbox" path="lastname" default="''" config="required:true">Last name</ui-component>
@@ -44,15 +44,6 @@
 
 <script>
 	PLUGIN(function(exports) {
-		/* !window.contactformsubmit && (window.contactformsubmit = function(el) {
-			var component = el.closest('[path]').component();
-			var scope = component.pathscope;
-			if (CAN(scope + '.*')) {
-				RESET(scope + '.*');
-				AJAX('POST /api/contact/', GET(scope), scope + '.response');
-			}
-		}); */
-
 		exports.contactformsubmit = function(el) {
 			var component = el.closest('[path]').component();
 			var scope = component.pathscope;
