--- a/views/layout.html
+++ b/views/layout.html
@@ -32,21 +32,23 @@
 		</div>
 	</header>
 	<div class="container">
+
 		<h1>Total.js Example</h1>
 		<div class="row">
 			<div class="col-md-4 col-sm-4 m">
-				<a href="services.html"><img src="/public/img/001.jpg" alt="Eshop" class="img-responsive img-rounded" /></a>
+				<a href="/services/"><img src="/public/img/001.jpg" alt="Eshop" class="img-responsive img-rounded" /></a>
 			</div>
 			<div class="col-md-4 col-sm-4 m">
-				<a href="services.html"><img src="/public/img/002.jpg" alt="Easy modifications" class="img-responsive img-rounded" /></a>
+				<a href="/services/"><img src="/public/img/002.jpg" alt="Easy modifications" class="img-responsive img-rounded" /></a>
 			</div>
 			<div class="col-md-4 col-sm-4 m">
-				<a href="services.html"><img src="/public/img/003.jpg" alt="Redesign it" class="img-responsive img-rounded" /></a>
+				<a href="/services/"><img src="/public/img/003.jpg" alt="Redesign it" class="img-responsive img-rounded" /></a>
 			</div>
 		</div>
 		<br />
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
+				<!-- NEWSLETTER COMPONENT -->
 				<ui-import path="/public/components/newsletter.html"></ui-import>
 			</div>
 		</div>
@@ -85,9 +87,9 @@
 		<div><a href="http://www.totaljs.com">Powered by Total.js</a></div>
 	</footer>
 
-	<ui-component name="importer" path="common.page" config="if:pagereferences;url:/references.html"></ui-component>
-	<ui-component name="importer" path="common.page" config="if:pageservices;url:/services.html"></ui-component>
-	<ui-component name="importer" path="common.page" config="if:pagecontact;url:/contact.html"></ui-component>
+	<ui-component name="pages" path="common.page" config="if:pagereferences;url:/references.html"></ui-component>
+	<ui-component name="pages" path="common.page" config="if:pageservices;url:/services.html"></ui-component>
+	<ui-component name="pages" path="common.page" config="if:pagecontact;url:/contact.html"></ui-component>
 
 	<script>
 		PLUGIN('common', function(exports) {
