--- a/views/references.html
+++ b/views/references.html
@@ -8,46 +8,49 @@
 	.CLASS .reference b { display: block; font-size: 14px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
 	.CLASS .reference { margin-bottom: 30px; }
 </style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
 
 <ui-plugin path="~PATH~" class="CLASS">
-	<h1>References</h1>
-	<div class="row">
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-		</div>
-		<div class="col-md-3 col-sm-6 col-xs-6 reference">
-			<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+	<div style="padding: 40px">
+		<h1>References</h1>
+		<div class="row">
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-6 reference">
+				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+			</div>
 		</div>
 	</div>
 </ui-plugin>
