--- a/views/services.html
+++ b/views/services.html
@@ -1,46 +1,50 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link href="//cdn.componentator.com/spa.min@19pro.css" rel="stylesheet" />
+<script src="//cdn.componentator.com/spa.min@19.js"></script>
 
 <ui-plugin path="~PATH~">
-	<h1>Our work <b>is our hobby</b></h1>
-	<br />
-	<div class="row">
-		<div class="col-md-6 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+	<div style="padding:40px">
+		<h1>Our work <b>is our hobby</b></h1>
+		<br />
+		<div class="row">
+			<div class="col-md-6 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
+			<div class="col-md-6 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
 		</div>
-		<div class="col-md-6 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
-		</div>
-	</div>
-	<br />
-	<div><img src="/public/img/image.jpg" alt="Our work" class="img-responsive img-rounded" /></div>
-	<br />
-	<br />
-	<div class="row">
-		<div class="col-md-4 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
-		</div>
-		<div class="col-md-4 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
-		</div>
-		<div class="col-md-4 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
-		</div>
-		<div class="col-md-4 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
-		</div>
-		<div class="col-md-4 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
-		</div>
-		<div class="col-md-4 m">
-			<h2>Lorem ipsum dolor sit</h2>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+		<br />
+		<div><img src="/public/img/image.jpg" alt="Our work" class="img-responsive img-rounded" /></div>
+		<br />
+		<br />
+		<div class="row">
+			<div class="col-md-4 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
+			<div class="col-md-4 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
+			<div class="col-md-4 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
+			<div class="col-md-4 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
+			<div class="col-md-4 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
+			<div class="col-md-4 m">
+				<h2>Lorem ipsum dolor sit</h2>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptate excepturi sunt ex tempora sit obcaecati consequatur asperiores doloremque assumenda dolorum totam possimus, ipsa eveniet, dolor temporibus magnam! Praesentium, maiores.
+			</div>
 		</div>
 	</div>
 </ui-plugin>
