--- a/views/contact.html
+++ b/views/contact.html
@@ -1,11 +1,13 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 
 <ui-plugin path="~PATH~">
-	<div class="row">
+	<div class="row" style="padding: 40px">
 		<div class="col-md-2"></div>
 		<div class="col-md-8 m">
 			<h1>Contact</h1>
 			<ui-component name="visible" path="response" config="if:!value || !value.success">
-				<div class="row">com
+				<div class="row">
 					<div class="col-md-6 m">
 						<ui-component name="textbox" path="firstname" default="''" config="required:true">First name here</ui-component>
 					</div>
