--- a/views/contact.html
+++ b/views/contact.html
@@ -1,58 +1,74 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-
-<ui-plugin path="~PATH~">
-	<div class="row" style="padding: 40px">
-		<div class="col-md-2"></div>
-		<div class="col-md-8 m">
-			<h1>Contact</h1>
-			<ui-component name="visible" path="response" config="if:!value || !value.success">
-				<div class="row">
-					<div class="col-md-6 m">
-						<ui-component name="textbox" path="firstname" default="''" config="required:true">First name here</ui-component>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=10" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="robots" content="all,follow" />
+	<link rel="stylesheet" href="/public/css/default.css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700&subset=latin,latin-ext" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" />
+	<link href="//cdn.componentator.com/spa.min@19pro.css" rel="stylesheet" />
+	<script src="//cdn.componentator.com/spa.min@19.js"></script>
+</head>
+<body>
+	<ui-plugin path="~PATH~">
+		<div class="row" style="padding: 40px">
+			<div class="col-md-2"></div>
+			<div class="col-md-8 m">
+				<h1>Contact</h1>
+				<ui-component name="visible" path="response" config="if:!value || !value.success">
+					<div class="row">
+						<div class="col-md-6 m">
+							<ui-component name="textbox" path="firstname" default="''" config="required:true">First name here</ui-component>
+						</div>
+						<div class="col-md-6 m">
+							<ui-component name="textbox" path="lastname" default="''" config="required:true">Last name</ui-component>
+						</div>
 					</div>
-					<div class="col-md-6 m">
-						<ui-component name="textbox" path="lastname" default="''" config="required:true">Last name</ui-component>
+					<div class="row">
+						<div class="col-md-6 m">
+							<ui-component name="textbox" path="email" default="'@'" config="required:true;type:email">Email address</ui-component>
+						</div>
+						<div class="col-md-6 m">
+							<ui-component name="textbox" path="phone" default="''">Phone number</ui-component>
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 m">
-						<ui-component name="textbox" path="email" default="'@'" config="required:true;type:email">Email address</ui-component>
+					<br />
+					<div class="row">
+						<div class="col-md-12 m">
+							<ui-component name="textarea" path="message" default="''" config="height:100;required:true">Message</ui-component>
+						</div>
 					</div>
-					<div class="col-md-6 m">
-						<ui-component name="textbox" path="phone" default="''">Phone number</ui-component>
+					<ui-component name="error" path="response"></ui-component>
+					<br />
+					<div class="row">
+						<div class="col-md-6">
+							<ui-component name="validation" path="?">
+								<button class="button exec" name="submit" disabled="disabled" data-exec="contactformsubmit">SUBMIT FORM</button>
+							</ui-component>
+						</div>
 					</div>
-				</div>
-				<br />
-				<div class="row">
-					<div class="col-md-12 m">
-						<ui-component name="textarea" path="message" default="''" config="height:100;required:true">Message</ui-component>
-					</div>
-				</div>
-				<ui-component name="error" path="response"></ui-component>
-				<br />
-				<div class="row">
-					<div class="col-md-6">
-						<ui-component name="validation" path="?">
-							<button class="button exec" name="submit" disabled="disabled" data-exec="contactformsubmit">SUBMIT FORM</button>
-						</ui-component>
-					</div>
-				</div>
-			</ui-component>
+				</ui-component>
+			</div>
 		</div>
-	</div>
-</ui-plugin>
+	</ui-plugin>
 
-<script>
-	PLUGIN(function(exports) {
-		exports.contactformsubmit = function(el) {
-			var component = el.closest('[path]').component();
-			var scope = component.pathscope;
-			console.log('Scope: ', scope);
-			if (CAN(scope + '.*')) {
-				RESET(scope + '.*');
-				AJAX('POST /api/contact/', GET(scope), scope + '.response');
-			}
-		};
-	});
-</script>
+	<script>
+		PLUGIN(function(exports) {
+			exports.contactformsubmit = function(el) {
+				var component = el.closest('[path]').component();
+				var scope = component.pathscope;
+				console.log('Scope: ', scope);
+				if (CAN(scope + '.*')) {
+					RESET(scope + '.*');
+					AJAX('POST /api/contact/', GET(scope), scope + '.response');
+				}
+			};
+		});
+	</script>
+</body>
+</html>
